# agsimgui

./: CMakeLists.txt  LICENSE  README.bbcode  README.md  agsimgui.sln  azure-pipelines.yml
agsimgui/: AgsImGuiStyle.cpp  AgsImGuiStyle.h  AgsImVec2.cpp  AgsImVec2.h  AgsImVec4.cpp  AgsImVec4.h  CMakeLists.txt  Makefile  Makefile-objs  Screen.cpp  Screen.h  SerialHelper.cpp  SerialHelper.h  agsimgui.ash  agsimgui.cpp  agsimgui.h  agsimgui.vcxproj  agsimgui.vcxproj.filters  make_header.sh
agsimgui/imgui/examples/: imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_softraster.cpp  imgui_impl_softraster.h
agsimgui/imgui/misc/: README.txt
agsimgui/imgui/misc/softraster/: barycentric.h  color.h  defines.h  softraster.h  texture.h  utils.h
agsimgui/libs/clip/: clip_win.cpp
agsimgui_demo/: Game.agf  GlobalScript.asc  acsprset.spr  room1.asc  room1.crm  room2.asc  room2.crm  room3.asc  room3.crm  room4.asc  room4.crm
